--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "expo": "~54.0.7",
+    "expo-camera": "~17.0.7",
+    "expo-file-system": "~19.0.14",
+    "expo-image-picker": "~17.0.8",
     "expo-router": "~6.0.4",
+    "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
@@ -20,14 +24,14 @@
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-svg": "15.12.1",
-    "expo-image-picker": "~17.0.8",
-    "expo-file-system": "~19.0.14",
-    "expo-camera": "~17.0.7",
-    "expo-sqlite": "~16.0.8"
+    "react-native-svg": "15.12.1"
   },
   "devDependencies": {
+    "@react-native/eslint-config": "^0.81.1",
     "@types/react": "~19.1.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.8",
+    "prettier": "^3.6.2",
     "typescript": "~5.9.2"
   },
   "private": true
