--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~6.1.2",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "~19.1.7",
     "expo": "~54.0.7",
     "expo-camera": "~17.0.7",
+    "expo-constants": "~18.0.8",
     "expo-file-system": "~19.0.14",
     "expo-image-picker": "~17.0.8",
+    "expo-linking": "~8.0.8",
     "expo-router": "~6.0.4",
     "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
@@ -20,15 +25,18 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-css-interop": "^0.2.1",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-svg": "15.12.1"
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.1",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@react-native/eslint-config": "^0.81.1",
-    "@types/react": "~19.1.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.6.2",
