--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -16,9 +16,11 @@
     "expo-camera": "~17.0.7",
     "expo-constants": "~18.0.8",
     "expo-file-system": "~19.0.14",
+    "expo-font": "~14.0.8",
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.4",
+    "expo-splash-screen": "~31.0.10",
     "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
     "nativewind": "^4.2.1",
